--- a/_config.yml
+++ b/_config.yml
@@ -10,7 +10,7 @@ locale                   : "en-US"
 title                    : "Venkata Akhil Guntur"
 title_separator          : "-"
 name                     : &name "Venkata Akhil Guntur"
-description              : &description "personal description"
+description              : &description "Graduate student specializing in Machine Learning, Deep Learning & AI"
 url                      : https://venkataakhilguntur.github.io # the base hostname & protocol for your site e.g. "https://mmistakes.github.io"
 baseurl                  : "" # the subpath of your site, e.g. "/blog"
 repository               : "venkataakhilguntur/venkataakhilguntur.github.io"
