--- a/_config.yml
+++ b/_config.yml
@@ -102,7 +102,7 @@ author:
   instagram        :
   impactstory      : 
   lastfm           :
-  linkedin         : "https://www.linkedin.com/in/venkata-akhil-guntur-758446117"
+  linkedin         : "venkata-akhil-guntur-758446117"
   orcid            : 
   pinterest        :
   soundcloud       :
