--- a/_config.yml
+++ b/_config.yml
@@ -11,9 +11,9 @@ title                    : "Venkata Akhil Guntur"
 title_separator          : "-"
 name                     : &name "Venkata Akhil Guntur"
 description              : &description "Currently @MathWorks | MS in ECE (Signal Processing & ML) from Purdue | Ex-Wipro HOLMES"
-url                      : https://venkataakhilguntur.github.io # the base hostname & protocol for your site e.g. "https://mmistakes.github.io"
+url                      : https://akhilguntur2021.github.io # the base hostname & protocol for your site e.g. "https://mmistakes.github.io"
 baseurl                  : "" # the subpath of your site, e.g. "/blog"
-repository               : "AkhilGuntur2021/academicpages.github.io"
+repository               : "AkhilGuntur2021/AkhilGuntur2021.github.io"
 teaser                   :  # filename of teaser fallback teaser image placed in /images/, .e.g. "500x300.png"
 breadcrumbs              : false # true, false (default)
 words_per_minute         : 160
